--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
-		"@babel/runtime": "^7.7.7",
+		"@babel/runtime": "^7.22.5",
 		"@tarojs/components": "3.6.6",
 		"@tarojs/helper": "3.6.6",
 		"@tarojs/plugin-framework-vue3": "3.6.6",
@@ -37,38 +37,39 @@
 		"@tarojs/shared": "3.6.6",
 		"@tarojs/taro": "3.6.6",
 		"@tarojs/taro-h5": "3.6.6",
-		"dayjs": "^1.11.5",
-		"prettier-plugin-tailwindcss": "^0.2.5",
-		"unocss-preset-extra": "^0.5.0",
-		"vue": "^3.2.30",
-		"weapp.socket.io": "^2.1.0"
+		"dayjs": "^1.11.8",
+		"prettier-plugin-tailwindcss": "^0.2.8",
+		"taro-ui-vue3": "1.0.0-alpha.21",
+		"unocss-preset-extra": "^0.5.2",
+		"vue": "^3.3.4",
+		"weapp.socket.io": "^2.2.1"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.8.0",
-		"@iconify-json/ri": "^1.1.3",
+		"@babel/core": "^7.22.5",
+		"@iconify-json/ri": "^1.1.10",
 		"@tarojs/cli": "3.6.6",
 		"@tarojs/webpack5-runner": "3.6.6",
-		"@types/webpack-env": "^1.13.6",
-		"@typescript-eslint/eslint-plugin": "^5.20.0",
-		"@typescript-eslint/parser": "^5.20.0",
+		"@types/webpack-env": "^1.18.1",
+		"@typescript-eslint/eslint-plugin": "^5.60.0",
+		"@typescript-eslint/parser": "^5.60.0",
 		"@unocss/preset-icons": "^0.45.30",
-		"@unocss/webpack": "^0.45.29",
-		"@vue/babel-plugin-jsx": "^1.0.6",
-		"@vue/compiler-sfc": "^3.0.0",
-		"babel-plugin-import": "^1.13.3",
+		"@unocss/webpack": "^0.45.30",
+		"@vue/babel-plugin-jsx": "^1.1.1",
+		"@vue/compiler-sfc": "^3.3.4",
+		"babel-plugin-import": "^1.13.6",
 		"babel-preset-taro": "3.6.6",
 		"css-loader": "3.4.2",
-		"eslint": "^8.12.0",
+		"eslint": "^8.43.0",
 		"eslint-config-taro": "3.6.6",
-		"eslint-plugin-vue": "^8.0.0",
+		"eslint-plugin-vue": "^8.7.1",
 		"style-loader": "1.3.0",
-		"stylelint": "^14.4.0",
-		"typescript": "^4.1.0",
-		"unocss": "^0.45.29",
+		"stylelint": "^15.8.0",
+		"typescript": "^5.1.3",
+		"unocss": "^0.45.30",
 		"unocss-preset-weapp": "^0.1.18",
-		"unplugin-auto-import": "^0.11.2",
+		"unplugin-auto-import": "^0.16.4",
 		"unplugin-transform-we-class": "^0.1.19",
-		"vue-loader": "^17.0.0",
+		"vue-loader": "^17.2.2",
 		"webpack": "5.78.0"
 	}
 }
