--- a/package.json
+++ b/package.json
@@ -22,56 +22,48 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
-		"@babel/runtime": "^7.22.5",
-		"@tarojs/components": "3.6.6",
-		"@tarojs/helper": "3.6.6",
-		"@tarojs/plugin-framework-vue3": "3.6.6",
-		"@tarojs/plugin-html": "3.6.6",
-		"@tarojs/plugin-platform-alipay": "3.6.6",
-		"@tarojs/plugin-platform-jd": "3.6.6",
-		"@tarojs/plugin-platform-qq": "3.6.6",
-		"@tarojs/plugin-platform-swan": "3.6.6",
-		"@tarojs/plugin-platform-tt": "3.6.6",
-		"@tarojs/plugin-platform-weapp": "3.6.6",
-		"@tarojs/router": "3.6.6",
-		"@tarojs/runtime": "3.6.6",
-		"@tarojs/shared": "3.6.6",
-		"@tarojs/taro": "3.6.6",
-		"@tarojs/taro-h5": "3.6.6",
-		"dayjs": "^1.11.8",
+		"@babel/runtime": "^7.22.6",
+		"@tarojs/components": "^3.6.8",
+		"@tarojs/helper": "^3.6.8",
+		"@tarojs/plugin-framework-vue3": "^3.6.8",
+		"@tarojs/plugin-html": "^3.6.8",
+		"@tarojs/plugin-platform-weapp": "^3.6.8",
+		"@tarojs/router": "^3.6.8",
+		"@tarojs/runtime": "^3.6.8",
+		"@tarojs/shared": "^3.6.8",
+		"@tarojs/taro": "^3.6.8",
+		"@tarojs/taro-h5": "^3.6.8",
 		"nanoid": "^4.0.2",
-		"prettier-plugin-tailwindcss": "^0.2.8",
 		"taro-ui-vue3": "1.0.0-alpha.21",
 		"unocss-preset-extra": "^0.5.2",
-		"vue": "^3.3.4",
-		"weapp.socket.io": "^2.2.1"
+		"vue": "^3.3.4"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.22.5",
+		"@babel/core": "^7.22.6",
 		"@iconify-json/ri": "^1.1.10",
-		"@tarojs/cli": "3.6.6",
-		"@tarojs/webpack5-runner": "3.6.6",
+		"@tarojs/cli": "^3.6.8",
+		"@tarojs/webpack5-runner": "^3.6.8",
 		"@types/webpack-env": "^1.18.1",
-		"@typescript-eslint/eslint-plugin": "^5.60.0",
-		"@typescript-eslint/parser": "^5.60.0",
+		"@typescript-eslint/eslint-plugin": "^5.61.0",
+		"@typescript-eslint/parser": "^5.61.0",
 		"@unocss/preset-icons": "^0.45.30",
 		"@unocss/webpack": "^0.45.30",
-		"@vue/babel-plugin-jsx": "^1.1.1",
+		"@vue/babel-plugin-jsx": "^1.1.5",
 		"@vue/compiler-sfc": "^3.3.4",
 		"babel-plugin-import": "^1.13.6",
-		"babel-preset-taro": "3.6.6",
-		"css-loader": "3.4.2",
-		"eslint": "^8.43.0",
-		"eslint-config-taro": "3.6.6",
+		"babel-preset-taro": "^3.6.8",
+		"css-loader": "^3.6.0",
+		"eslint": "^8.44.0",
+		"eslint-config-taro": "^3.6.8",
 		"eslint-plugin-vue": "^8.7.1",
-		"style-loader": "1.3.0",
-		"stylelint": "^15.8.0",
-		"typescript": "^5.1.3",
+		"style-loader": "^1.3.0",
+		"stylelint": "^15.10.0",
+		"typescript": "^5.1.6",
 		"unocss": "^0.45.30",
 		"unocss-preset-weapp": "^0.1.18",
-		"unplugin-auto-import": "^0.16.4",
+		"unplugin-auto-import": "^0.16.6",
 		"unplugin-transform-we-class": "^0.1.19",
 		"vue-loader": "^17.2.2",
-		"webpack": "5.78.0"
+		"webpack": "^5.88.1"
 	}
 }
