更新自动生成的杂项及配置文件

--- a/project.config.json
+++ b/project.config.json
@@ -45,5 +45,6 @@
     "ignore": [],
     "include": []
   },
-  "appid": "wx48049a8466ed0e2b"
+  "appid": "wx48049a8466ed0e2b",
+  "projectname": "excercise-time"
 }
