--- a/project.private.config.json
+++ b/project.private.config.json
@@ -3,6 +3,7 @@
   "projectname": "excercise-time",
   "setting": {
     "compileHotReLoad": true,
-    "urlCheck": false
-  }
+    "urlCheck": false,
+  },
+  "libVersion": "2.32.2"
 }
